# til

./: .cursorrules  .gitignore  .gitmodules  .luarc.json  .markdownlint.jsonc  CONTRIBUTING.md  Dockerfile  Makefile  MyDictionary.xml  MyInfo.plist  Procfile  README.md  _config.yml  app.py  build.gradle  constants.py  deploy.sh  index.js  login.html  main.py  package-lock.json  package.json  pyproject.toml  renovate.json5
art/: README.md
computer-science/ai/_src/llama_index_sandbox/: .env.tpl  .gitignore  README.md  pyproject.toml
computer-science/big-data/machine-learning/coursera-machine-learning-ipynb/: README.md  ex1.ipynb  pyproject.toml
computer-science/big-data/machine-learning/logstic-regression-impl/: README.md  init.ipynb  note.ipynb  pyproject.toml
computer-science/cv/_src/a2j-transformer-demo/: Makefile  README.md  hello.py  pyproject.toml
computer-science/cv/_src/digital-image-processing/: .gitignore  README.md  inverse_fft2d.py  main.ipynb  pyproject.toml
computer-science/cv/_src/handpose-virtualview-demo/: Makefile  README.md  app.py  pyproject.toml
computer-science/cv/_src/simpleHand-demo/: README.md  pyproject.toml
computer-science/data-structures-algorithms/_python/: pyproject.toml
computer-science/data-structures-algorithms/_python/aoj/: ALDS1_12_C.ipynb  DPL_2_A.ipynb  GRL_1_B.ipynb
computer-science/data-structures-algorithms/_python/atcoder/abc035/: abc035-d.ipynb
computer-science/data-structures-algorithms/_python/atcoder/abc075/: abc075-c.ipynb
computer-science/data-structures-algorithms/_python/atcoder/abc358/: abc358-b.ipynb  abc358-c.ipynb
computer-science/data-structures-algorithms/_python/atcoder/abc359/: abc359-c.ipynb
computer-science/data-structures-algorithms/_python/atcoder/abc363/: abc363-b.ipynb
computer-science/data-structures-algorithms/_python/creative-infomatics/2017-08/: testdata.ipynb
computer-science/data-structures-algorithms/_python/creative-infomatics/2018-08/: main.ipynb
computer-science/data-structures-algorithms/_python/creative-infomatics/2019-08/: main.ipynb
computer-science/data-structures-algorithms/_python/creative-infomatics/2021-08/: Makefile  main.ipynb  testdata.ipynb
computer-science/data-structures-algorithms/_python/creative-infomatics/2022-08/: maze0.txt  maze1.txt  p.txt
computer-science/machine-learning/_python/: README.md  pyproject.toml
computer-science/machine-learning/_python/deep-learning-from-scratch/: .gitignore
computer-science/machine-learning/_python/deep-learning-from-scratch-2/: .gitignore
computer-science/machine-learning/_python/deep-learning-from-scratch-2/notebooks/: ch06.ipynb
computer-science/machine-learning/_python/deep-learning-from-scratch-4/: latest.bat
computer-science/machine-learning/_python/deep-learning-from-scratch/notebooks/: ch07.ipynb
computer-science/machine-learning/_python/ml4se/: .gitignore  02-square_error.ipynb  ex-exponential_regression.ipynb
computer-science/machine-learning/_src/ITエンジニアのための機械学習理論入門/: Makefile  README.md  pyproject.toml
computer-science/machine-learning/_src/ii-atsuhiko-hands-on/: .gitignore  Qwen2.5-0.5B-instruct_QLoRA_SFTTr_NEFTune_T4_1ep.ipynb  README.md  pyproject.toml
computer-science/machine-learning/_src/language-learning/: .gitignore  Makefile  README.md  main.py  pyproject.toml
computer-science/machine-learning/_src/llm-exercises/: .gitignore  Makefile  README.md  pyproject.toml
computer-science/machine-learning/_src/llm-exercises/notbooks/: preprocess.ipynb
computer-science/machine-learning/_src/llm-exercises/notebooks/: LoRA_template_20241127.ipynb  eval.ipynb  preprocess.ipynb  supervised_fine_tuning.ipynb
computer-science/machine-learning/_src/quantization/: check_fp8.py  main.ipynb  pyproject.toml
computer-science/machine-learning/_src/rl-turtle/: .gitignore  README.md  pyproject.toml
computer-science/machine-learning/_src/zerotsuku/: pyproject.toml
computer-science/network/rfc6265-http-cookie/access_cookie/: pyproject.toml
computer-science/nlp/_src/guidance_sandbox/: README.md  live-streaming.ipynb  pyproject.toml
computer-science/nlp/_src/langchain-sandbox/: .env.tpl  README.md  main.py  pyproject.toml  temperature.py
computer-science/nlp/_src/llama-index-sandbox/: Makefile  README.md  create-index.py  main.py  pyproject.toml
computer-science/nlp/_src/llama_index_local/: README.md  issue_1194.py  pyproject.toml
computer-science/nlp/_src/nlp100/: Makefile  ch01.ipynb  ch05.ipynb  ch06.ipynb  ch06_naive_bayes.ipynb  ch07.ipynb  ch09.ipynb  environment.yaml  pyproject.toml
computer-science/nlp/nlp100/: .gitignore  Makefile  README.md  ch01.ipynb  ch04.ipynb  ch05.ipynb  ch05_cabocha-python.ipynb  ch05_pandas.ipynb  ch06.ipynb  ch06_naive_bayes.ipynb  ch07.ipynb  ch08.ipynb  pyproject.toml  requirements.txt
software-engineering/atproto/_src/event-stream/: README.md  pyproject.toml
software-engineering/atproto/_src/python-atproto/: .gitignore  README.md  pyproject.toml
software-engineering/bitsandbytes/_src/getting-started/: README.md  main.py  pyproject.toml
software-engineering/comfyui/_src/hunyuan-i2v/: Makefile  pyproject.toml
software-engineering/comfyui/_src/kijai-wanvideo/: .gitignore  Makefile  README.md  pyproject.toml
software-engineering/comfyui/_src/sr-framepack/: .gitignore  Makefile  README.md  merge.py  pyproject.toml
software-engineering/python/_src/: README.md  logging.ipynb  main.ipynb  pyproject.toml
software-engineering/python/_src/editable-install/: pyproject.toml
software-engineering/python/_src/generator/: obj.py
software-engineering/python/_src/host-header-from-cert/: .env.sample  Pipfile
software-engineering/python/_src/lambda/: lambda.py
software-engineering/python/_src/module/: .gitignore  Makefile  README.md  pyproject.toml
software-engineering/python/_src/multiprocessing/: main.ipynb  main.py
software-engineering/python/_src/path/: shebang_path.py
software-engineering/python/_src/pickle/: docker-compose.yaml
software-engineering/python/_src/sandbox/: README.md
software-engineering/python/_src/scope/: scope.py
(+2740 files in other folders)
