[tool.poetry]
name = "llama_index_sandbox"
version = "0.1.0"
description = ""
authors = ["xhiroga <xhiroga@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llama_index_sandbox"}]

[tool.poetry.dependencies]
python = "3.9.12"
llama-index = "^0.5.10"
html2text = "^2020.1.16" # SimpleWebPageReader
feedparser = "^6.0.10" # RssReader


[tool.poetry.group.dev.dependencies]
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
mypy = "^1.2.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
