[tool.poetry]
name = "logstic-regression-impl"
version = "0.1.0"
description = ""
authors = ["xhiroga <13391129+xhiroga@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
