[project]
name = "handpose-virtualview-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.44.1",
    "imageio==2.13.5",
    "matplotlib==3.6.0",
    "numpy==1.22.1",
    "opencv-python==4.5.5.62",
    "pillow==9.0.0",
    "pyyaml==5.4.1",
    "scikit-image==0.19.1",
    "scipy==1.7.3",
    "tensorboard==2.8.0",
    "tensorboardx==2.4.1",
    "torch==1.8.1+cu111",
    "torchaudio==0.8.1",
    "torchvision==0.9.1+cu111",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl"
