[project]
name = "simplehand-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations==1.3.1",
    "deepspeed==0.14.0",
    "fire>=0.7.0",
    "hiera-transformer==0.1.2",
    "ipython==8.12.3",
    "loguru==0.7.2",
    "numpy==1.24.3",
    "nvidia-ml-py3==7.352.0",
    "open3d>=0.18.0",
    "opencv-python-headless==4.8.1.78",
    "pynvml==11.5.0",
    "pytorch-memlab==0.3.0",
    "timm==0.9.12",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.65.0",
]
