[project]
name = "itenzinianotamenoji-jie-xue-xi-li-lun-ru-men"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hiroaki Ogasawara", email = "13391129+xhiroga@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
