[project]
name = "ii-atsuhiko-hands-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "accelerate>=1.1.1",
    "bitsandbytes>=0.44.1",
    "datasets==2.14.5",
    "evaluate>=0.4.3",
    "peft>=0.13.2",
    "transformers==4.43.3",
    "trl>=0.11.4",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "wandb>=0.18.6",
]
