[project]
name = "llm-exercises"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "torch==2.5.0+cu124",
    "torchvision==0.20.0+cu124",
    "unsloth>=2024.10.4",
    "wandb>=0.18.5",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
