[project]
name = "quantization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.3",
    "safetensors>=0.5.3",
    "pytorch-triton>=3.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
pytorch-triton = { index = "pytorch-cu128" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
