[project]
name = "rl-turtle"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hiroaki Ogasawara", email = "13391129+xhiroga@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "stable-baselines3>=2.3.2",
    "opencv-python-headless>=4.10.0.84",
    "gymnasium>=0.29.1",
    "wandb>=0.17.3",
    "torch>=2.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rl_turtle"]
