[project]
name = "zerotsuku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
