[project]
name = "hunyuan-i2v"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "aiohttp>=3.11.8",
    "av>=14.2.0",
    "comfyui-frontend-package==1.10.17",
    "einops>=0.8.1",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.2",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "tokenizers>=0.13.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsde>=0.2.6",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
    "yarl>=1.18.0",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.29.2",
]
