[project]
name = "kijai-wanvideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "aiohttp>=3.11.14",
    "av>=14.2.0",
    "comfyui-frontend-package==1.14.5",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "kornia>=0.8.0",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "protobuf>=6.30.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.5.3",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "spandrel>=0.4.1",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsde>=0.2.6",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
    "yarl>=1.18.3",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.29.3",
    "nvitop>=1.4.2",
]

[tool.uv]
# WSL や LambdaLabs, RunPod は hardlink に対応していない。
# symlink の場合、1つの Volume を複数のインスタンスで使いまわす LambdaLabs や RunPod で、パス関連？の問題が起きそう。
# 詳しい調査はしないが、symlink を使っていた時、ComfyUIのFrontendでcssやjsが読み込めなくなるバグが起きた。
link-mode = "copy"

[[tool.uv.index]]
# 2025-03-25現在、RunPod の L40S の CUDA Version は 12.4
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
torchvision =  [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
torchaudio =  [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
