[project]
name = "kijai-wanvideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "addict>=2.4.0",
    "aiohttp>=3.11.14",
    "albumentations>=2.0.5",
    "av>=14.2.0",
    "color-matcher>=0.6.0",
    "colour-science>=0.4.6",
    "comfyui-frontend-package==1.14.5",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "filelock>=3.18.0",
    "ftfy>=6.3.1",
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub>=0.29.3",
    "imageio-ffmpeg>=0.6.0",
    "importlib-metadata>=8.6.1",
    "kornia>=0.8.0",
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.14",
    "mss>=10.0.0",
    "numpy>=2.2.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pixeloe>=0.1.4",
    "protobuf>=4.25.6", # mediapipe==0.10.21 (latest) depends on protobuf>=4.25.3,<5.
    "psutil>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "safetensors>=0.5.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "spandrel>=0.4.1",
    "svglib>=1.5.1",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsde>=0.2.6",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
    "transparent-background>=1.3.2",
    "trimesh[easy]>=4.6.6",
    "yacs>=0.1.8",
    "yapf>=0.43.0",
    "yarl>=1.18.3",
]
# ComfyUI_essentials depends on numba and rembg, however I ignore it.

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.29.3",
    "nvitop>=1.4.2",
    "yt-dlp>=2025.3.31",
]

[tool.uv]
# WSL や LambdaLabs, RunPod は hardlink に対応していない。
# symlink の場合、1つの Volume を複数のインスタンスで使いまわす LambdaLabs や RunPod で、パス関連？の問題が起きそう。
# 詳しい調査はしないが、symlink を使っていた時、ComfyUIのFrontendでcssやjsが読み込めなくなるバグが起きた。
link-mode = "copy"

[[tool.uv.index]]
# 2025-03-25現在、RunPod の L40S の CUDA Version は 12.4
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
torchvision =  [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
torchaudio =  [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
