[project]
name = "sr-framepack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "aiohttp>=3.11.8",
    "color-matcher>=0.6.0",
    "colour-science>=0.4.6",
    "comfyui-frontend-package==1.19.9",
    "comfyui-workflow-templates==0.1.14",
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.31.2",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.3",
    "mss>=10.0.0",
    "numba>=0.61.2",
    "numpy>=1.25.0",
    "opencv-python>=4.11.0.86",
    "peft>=0.15.2",
    "pillow>=10.3.0",
    "pixeloe>=0.1.4",
    "psutil>=7.0.0",
    "pytorch-triton>=3.3.0",
    "pyyaml>=6.0.2",
    "rembg>=2.0.66",
    "safetensors>=0.4.2",
    "sageattention>=1.0.6",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.13.3",
    "torch>=2.8.0.dev20250516",
    "torchsde>=0.2.6",
    "torchvision>=0.22.0.dev20250516",
    "tqdm>=4.67.1",
    "transformers>=4.46.2",
    "transparent-background>=1.3.4",
    "yarl>=1.18.0",
]

[tool.uv]
environments = ["platform_machine == 'x86_64' and sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
pytorch-triton = { index = "pytorch-nightly-cu128" }
torch = { index = "pytorch-nightly-cu128" }
torchvision = { index = "pytorch-nightly-cu128" }
